--- a/shaishguni/templates/index.html
+++ b/shaishguni/templates/index.html
@@ -282,6 +282,46 @@
     <!-- Initialize Firebase -->
     <script src="/__/firebase/init.js"></script>
 
+
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+    <script src="https://www.gstatic.com/firebasejs/8.3.1/firebase-app.js"></script>
+
+    <!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+    <script src="https://www.gstatic.com/firebasejs/8.3.1/firebase-analytics.js"></script>
+
+    <script>
+        // Your web app's Firebase configuration
+        // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+        var firebaseConfig = {
+            apiKey: "AIzaSyCEgTHf1u7WFmfinLeK3jLrp6u9rcWGKGo",
+            authDomain: "shaish-guni.firebaseapp.com",
+            projectId: "shaish-guni",
+            storageBucket: "shaish-guni.appspot.com",
+            messagingSenderId: "645049022825",
+            appId: "1:645049022825:web:7bfb18f782bebdb85b25f8",
+            measurementId: "G-8FZLREDPE5"
+        };
+        // Initialize Firebase
+        firebase.initializeApp(firebaseConfig);
+        firebase.analytics();
+
+        // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+        const firebaseConfig = {
+            apiKey: "AIzaSyCEgTHf1u7WFmfinLeK3jLrp6u9rcWGKGo",
+            authDomain: "shaish-guni.firebaseapp.com",
+            projectId: "shaish-guni",
+            storageBucket: "shaish-guni.appspot.com",
+            messagingSenderId: "645049022825",
+            appId: "1:645049022825:web:7bfb18f782bebdb85b25f8",
+            measurementId: "G-8FZLREDPE5"
+        };
+    </script>
+
+
+
 </body>
+
+</html>
 
 </html>
