--- a/shaishguni/templates/index.html
+++ b/shaishguni/templates/index.html
@@ -45,7 +45,7 @@
                 <a href="https://www.instagram.com/shaish.guni/ "><i class="fab fa-instagram "></i></a>
                 <a href="https://twitter.com/GuniShaish "><i class="fab fa-twitter "></i></a>
                 <a href="https://www.linkedin.com/in/shaish-guni-53a1a21b6/ "><i class="fab fa-linkedin "></i></a>
-                <a href="https://github.com/Shaish-programe "><i class="fab fa-github "></i></a>
+                <a href="https://github.com/shaishguni"><i class="fab fa-github "></i></a>
             </div>
         </div>
     </section>
