--- a/shaishguni/templates/index.html
+++ b/shaishguni/templates/index.html
@@ -256,7 +256,7 @@
                         <textarea name="message" rows="8 " cols="80 " placeholder="Message "></textarea>
                     </div>
                     <div class="input-box ">
-                        <button type="submit" class="btn" herf="message.html">Submit</button>
+                        <a href=""><button type="submit" class="btn" herf="message.html">Submit</button></a>
                     </div>
                 </div>
             </div>
