--- a/shaishguni/templates/index.html
+++ b/shaishguni/templates/index.html
@@ -136,7 +136,7 @@
             </div>
             <div class="info ">
 
-                <h3 style=" color: #3a6cf4;">Data Scince</h3>
+                <h3 style=" color: #3a6cf4;">Data Science</h3>
                 <p>Data are units of information, often numeric, that are collected through observation in a space and what we keep Sceince into it it defines the data where we makes uses scientific methods, processes, algorithms and systems to extract knowledge
                     and insights from structured and unstructured data, and apply knowledge and actionable insights where we anylize data.Its all about data where we stack it.I bascially am a data scieintist I develop stuffs related to recomedation engines,anti-cheating
                     objects,Customer segmentations and management system , internal data apps.</p>
@@ -272,7 +272,7 @@
 
     <script src="{%static 'script.js'%}" charset="utf-8 "></script>
 
-    </script>
+
 
 
 </body>
